--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "dev": "nodemon --watch 'src/**/*' -e ts,tsx --exec ts-node ./src/index.ts"
   },
   "dependencies": {
+    "dotenv": "8.2.0",
     "koa": "2.11.0",
     "koa-router": "7.4.0",
     "mongoose": "5.8.3",
     "ramda": "0.26.1"
   },
   "devDependencies": {
+    "@types/dotenv": "8.2.0",
     "@types/koa": "2.11.0",
     "@types/koa-router": "7.0.42",
     "@types/mongoose": "5.5.35",
