https://github.com/isaldin/ib17_graphql_api/projects/1#card-31471137

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
   "editor.formatOnSave": true,
-  "tslint.packageManager": "yarn"
+  "tslint.packageManager": "yarn",
+  "typescript.tsdk": "node_modules/typescript/lib"
 }
