--- a/package.json
+++ b/package.json
@@ -1,26 +1,23 @@
 {
-  "name": "backend",
+  "name": "@hhbttl/gateway",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon --watch 'src/**/*' -e ts,tsx --exec DEBUG=koa* ts-node ./src/index.ts"
+    "dev": "nodemon --watch 'src/**/*' -e ts,tsx --exec ts-node ./src/index.ts"
   },
   "dependencies": {
     "dotenv": "8.2.0",
-    "koa": "2.11.0",
-    "koa-graphql": "0.8.0",
-    "koa-mount": "4.0.0",
-    "koa-router": "7.4.0",
+    "fastify": "2.11.0",
+    "fastify-gql": "2.2.0",
+    "graphql": "14.5.8",
     "mongoose": "5.8.3",
-    "ramda": "0.26.1"
+    "ramda": "0.26.1",
+    "reflect-metadata": "0.1.13",
+    "type-graphql": "0.17.6"
   },
   "devDependencies": {
     "@types/dotenv": "8.2.0",
-    "@types/koa": "2.11.0",
-    "@types/koa-graphql": "0.8.3",
-    "@types/koa-mount": "4.0.0",
-    "@types/koa-router": "7.0.42",
     "@types/mongoose": "5.5.35",
     "@types/ramda": "0.26.39",
     "nodemon": "2.0.2",
@@ -28,5 +25,8 @@
     "tslint": "5.20.1",
     "tslint-config-prettier": "1.18.0",
     "typescript": "3.7.4"
+  },
+  "resolutions": {
+    "graphql": "14.5.8"
   }
 }
