--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon --watch 'src/**/*' -e ts,tsx --exec ts-node ./src/index.ts"
+    "dev": "nodemon --watch 'src/**/*' -e ts,tsx --exec ts-node -r tsconfig-paths/register ./src/index.ts"
   },
   "dependencies": {
+    "dataloader": "2.0.0",
     "dotenv": "8.2.0",
     "fastify": "2.11.0",
     "fastify-gql": "2.2.0",
@@ -22,6 +23,7 @@
     "@types/ramda": "0.26.39",
     "nodemon": "2.0.2",
     "ts-node": "8.5.4",
+    "tsconfig-paths": "3.9.0",
     "tslint": "5.20.1",
     "tslint-config-prettier": "1.18.0",
     "typescript": "3.7.4"
