--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dataloader": "2.0.0",
     "dotenv": "8.2.0",
     "fastify": "2.11.0",
+    "fastify-compress": "2.0.0",
     "fastify-gql": "2.2.0",
     "graphql": "14.5.8",
     "mongoose": "5.8.3",
