--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hhbttl/gateway",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.ts",
   "license": "MIT",
   "scripts": {
     "dev": "nodemon --watch 'src/**/*' -e ts,tsx --exec ts-node -r tsconfig-paths/register ./src/index.ts"
