--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon --watch 'src/**/*' -e ts,tsx --exec ts-node -r tsconfig-paths/register ./src/index.ts",
+    "docker:mongo": "docker-compose -f ./docker/mongo-compose.yml up --remove-orphans -d",
     "test": "jest"
   },
   "dependencies": {
@@ -14,6 +15,7 @@
     "fastify-compress": "2.0.0",
     "fastify-gql": "2.2.0",
     "graphql": "14.5.8",
+    "js-base64": "2.5.1",
     "mongoose": "5.8.3",
     "ramda": "0.26.1",
     "reflect-metadata": "0.1.13",
@@ -22,6 +24,7 @@
   "devDependencies": {
     "@types/dotenv": "8.2.0",
     "@types/jest": "24.0.25",
+    "@types/js-base64": "2.3.1",
     "@types/mongoose": "5.5.35",
     "@types/ramda": "0.26.39",
     "@types/supertest": "2.0.8",
