--- a/docker/mongo-compose.yml
+++ b/docker/mongo-compose.yml
@@ -1,16 +1,17 @@
 # https://medium.com/faun/managing-mongodb-on-docker-with-docker-compose-26bf8a0bbae3
 
-version: "2.4"
+version: '2.4'
 
 services:
   mongo:
     image: mongo:4.2.2
-    container_name: "mongodb-gateway"
+    container_name: 'mongodb-gateway'
     environment:
       - MONGO_INITDB_DATABASE=usersdb
       - MONGO_INITDB_ROOT_USERNAME=rootuser
       - MONGO_INITDB_ROOT_PASSWORD=supersecurepassword
     volumes:
       - ./init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
+      - ../mongo-volume:/data/db
     ports:
       - 27018:27017
