--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "8.2.0",
     "fastify": "2.11.0",
     "fastify-compress": "2.0.0",
+    "fastify-cors": "3.0.1",
     "fastify-gql": "2.2.0",
     "graphql": "14.5.8",
     "js-base64": "2.5.1",
@@ -28,6 +29,7 @@
     "@types/mongoose": "5.5.35",
     "@types/ramda": "0.26.39",
     "@types/supertest": "2.0.8",
+    "apollo": "2.21.3",
     "jest": "24.9.0",
     "mongodb-memory-server": "6.2.1",
     "nodemon": "2.0.2",
